# Qa-jira-py

./: .gitignore  README.md  generate_doc.py  pyproject.toml
docs/superpowers/plans/: 2026-05-28-qa-jira-python-port-plan.md
docs/superpowers/specs/: 2026-05-28-qa-jira-python-port-design.md
src/qa_jira/: __main__.py  adf.py  cli.py  config.py  excel.py  file_handler.py  jira_client.py  models.py  prompts.py
src/qa_jira/ai/: __init__.py  anthropic_provider.py  base.py  http_provider.py  openai_compat_provider.py
src/qa_jira/commands/: _attachment.py  _helpers.py  mk_bug.py  mk_bugsheet.py  rm.py  setup.py  task_create.py
tests/: test_adf.py  test_ai.py  test_config.py  test_excel.py  test_file_handler.py  test_jira_client.py  test_models.py
