[project]
name = "qa-jira"
version = "0.1.0"
description = "CLI for QA engineers — AI-structured Jira tasks, bugs, and Excel bug sheets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "questionary>=2.0",
    "rich>=13.7",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
jira = "qa_jira.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_jira"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
